update tuto videos

--- a/src/pages/dossier-certifier.astro
+++ b/src/pages/dossier-certifier.astro
@@ -18,8 +18,8 @@ const TEXTS = {
 const providers = ["DGFIP", "Ameli", "LCL", "Société Générale", "Qonto", "Shine", "BoursoBank", "Digiposte", "Free", "TotalEnergies", "France Travail", "LinkedIn", "Gmail"];
 
 const VIDEOS = {
-  applicant: "https://www.youtube.com/embed/AsEb164cl8g?rel=0&modestbranding=1",
-  owner: "https://www.youtube.com/embed/mD1JxMWpPMc?rel=0&modestbranding=1",
+  applicant: "https://www.youtube.com/embed/P1rEqEPtxuI?rel=0&modestbranding=1",
+  owner: "https://www.youtube.com/embed/2aiQE-3ZjSg?rel=0&modestbranding=1",
   demo: "https://www.youtube.com/embed/nNy5jjgwFh4?rel=0&modestbranding=1"
 };
 ---
