updated logos and edited spacing

--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -16,18 +16,18 @@ const links = [
       <div class="flex items-center justify-between gap-4">
 
         <!-- Left: Logo -->
-        <div class="flex items-center flex-shrink-0">
-          <a href="/#home" aria-label="logo" class="flex items-center space-x-2">
+        <div class="flex items-center flex-shrink-0 -mt-4">
+          <a href="/#home" aria-label="logo" class="flex items-center space-x-2 overflow-hidden h-20">
             <img
               src="/logo_white.svg"
               alt="Tisura Logo"
-              class="h-12 w-12 hidden dark:block"
+              class="h-36 w-auto hidden dark:block"
               aria-hidden="true"
             />
             <img
               src="/logo_blue.svg"
               alt="Tisura Logo"
-              class="h-12 w-12 block dark:hidden"
+              class="h-36 w-auto block dark:hidden"
               aria-hidden="true"
             />
           </a>
